调整数据结构

--- a/src/views/home/findJob/knowledgeExperience.json
+++ b/src/views/home/findJob/knowledgeExperience.json
@@ -1,6 +1,6 @@
 [
   {
-    "knowledgeType": "vue2系列",
+    "knowledgeType": "Vue2系列",
     "type": "warning",
     "color": "rgb(243, 209, 158)",
     "list": [
@@ -199,7 +199,7 @@
     ]
   },
   {
-    "knowledgeType": "vue3系列",
+    "knowledgeType": "Vue3系列",
     "type": "danger",
     "color": "rgb(253, 226, 226)",
     "list": [
@@ -424,45 +424,7 @@
     ]
   },
   {
-    "knowledgeType": "CSS系列",
-    "type": "info",
-    "color": "rgb(233, 233, 235)",
-    "list": [
-      {
-        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
-        "title": "Vue.observable你有了解过吗，说说看",
-        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
-        "timestamp": 1692613874000
-      },
-      {
-        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
-        "title": "你知道vue中key的原理吗，说说你对它的理解",
-        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
-        "timestamp": 1692613874000
-      }
-    ]
-  },
-  {
-    "knowledgeType": "HTTP系列",
-    "type": "info",
-    "color": "rgb(233, 233, 235)",
-    "list": [
-      {
-        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
-        "title": "Vue.observable你有了解过吗，说说看",
-        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
-        "timestamp": 1692613874000
-      },
-      {
-        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
-        "title": "你知道vue中key的原理吗，说说你对它的理解",
-        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
-        "timestamp": 1692613874000
-      }
-    ]
-  },
-  {
-    "knowledgeType": "typescript系列",
+    "knowledgeType": "TypeScript系列",
     "type": "info",
     "color": "rgb(233, 233, 235)",
     "list": [
@@ -537,6 +499,120 @@
         "title": "说说如何在Vue项目中应用TypeScript",
         "markdownPath": "/typescript/说说如何在Vue项目中应用TypeScript.md",
         "timestamp": 1693123752000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "CSS系列",
+    "type": "info",
+    "color": "rgb(233, 233, 235)",
+    "list": [
+      {
+        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
+        "title": "Vue.observable你有了解过吗，说说看",
+        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
+        "title": "你知道vue中key的原理吗，说说你对它的理解",
+        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
+        "timestamp": 1692613874000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "HTML系列",
+    "type": "info",
+    "color": "rgb(233, 233, 235)",
+    "list": [
+      {
+        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
+        "title": "Vue.observable你有了解过吗，说说看",
+        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
+        "title": "你知道vue中key的原理吗，说说你对它的理解",
+        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
+        "timestamp": 1692613874000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "HTTP系列",
+    "type": "info",
+    "color": "rgb(233, 233, 235)",
+    "list": [
+      {
+        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
+        "title": "Vue.observable你有了解过吗，说说看",
+        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
+        "title": "你知道vue中key的原理吗，说说你对它的理解",
+        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
+        "timestamp": 1692613874000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "NodeJS系列",
+    "type": "info",
+    "color": "rgb(233, 233, 235)",
+    "list": [
+      {
+        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
+        "title": "Vue.observable你有了解过吗，说说看",
+        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
+        "title": "你知道vue中key的原理吗，说说你对它的理解",
+        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
+        "timestamp": 1692613874000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "Webpack系列",
+    "type": "info",
+    "color": "rgb(233, 233, 235)",
+    "list": [
+      {
+        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
+        "title": "Vue.observable你有了解过吗，说说看",
+        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
+        "title": "你知道vue中key的原理吗，说说你对它的理解",
+        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
+        "timestamp": 1692613874000
+      }
+    ]
+  },
+  {
+    "knowledgeType": "Vite系列",
+    "type": "info",
+    "color": "rgb(233, 233, 235)",
+    "list": [
+      {
+        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
+        "title": "Vue.observable你有了解过吗，说说看",
+        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
+        "timestamp": 1692613874000
+      },
+      {
+        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
+        "title": "你知道vue中key的原理吗，说说你对它的理解",
+        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
+        "timestamp": 1692613874000
       }
     ]
   }
