新增http八股文

--- a/src/views/home/findJob/knowledgeExperience.json
+++ b/src/views/home/findJob/knowledgeExperience.json
@@ -654,16 +654,88 @@
     "color": "rgb(233, 233, 235)",
     "list": [
       {
-        "desc": "面试官：Vue.observable你有了解过吗，说说看，并给出代码示例",
-        "title": "Vue.observable你有了解过吗，说说看",
-        "markdownPath": "/vue/Vue.observable你有了解过吗，说说看.md",
-        "timestamp": 1692613874000
+        "desc": "面试官：什么是HTTP，HTTP 和 HTTPS 的区别，并给出代码示例",
+        "title": "什么是HTTP，HTTP 和 HTTPS 的区别",
+        "markdownPath": "/HTTP/什么是HTTP，HTTP 和 HTTPS 的区别.md",
+        "timestamp": 1693379698000
       },
       {
-        "desc": "面试官：你知道vue中key的原理吗，说说你对它的理解，并给出代码示例",
-        "title": "你知道vue中key的原理吗，说说你对它的理解",
-        "markdownPath": "/vue/你知道vue中key的原理吗，说说你对它的理解.md",
-        "timestamp": 1692613874000
+        "desc": "面试官：为什么说HTTPS比HTTP安全，HTTPS是如何保证安全的，并给出代码示例",
+        "title": "为什么说HTTPS比HTTP安全，HTTPS是如何保证安全的",
+        "markdownPath": "/HTTP/为什么说HTTPS比HTTP安全，HTTPS是如何保证安全的.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：如何理解UDP和TCP区别及其应用场景，并给出代码示例",
+        "title": "如何理解UDP和TCP区别及其应用场景",
+        "markdownPath": "/HTTP/如何理解UDP和TCP区别及其应用场景.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：如何理解OSI七层模型，并给出代码示例",
+        "title": "如何理解OSI七层模型",
+        "markdownPath": "/HTTP/如何理解OSI七层模型.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：如何理解TCP、IP协议，并给出代码示例",
+        "title": "如何理解TCP、IP协议",
+        "markdownPath": "/HTTP/如何理解TCP、IP协议.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：DNS协议是什么？说说DNS完整的查询过程，并给出代码示例",
+        "title": "DNS协议是什么？说说DNS完整的查询过程",
+        "markdownPath": "/HTTP/DNS协议是什么？说说DNS完整的查询过程.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：如何理解CDN？说说实现原理，并给出代码示例",
+        "title": "如何理解CDN？说说实现原理",
+        "markdownPath": "/HTTP/如何理解CDN？说说实现原理.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：说说HTTP1.0、1.1、2.0的区别，并给出代码示例",
+        "title": "说说HTTP1.0、1.1、2.0的区别",
+        "markdownPath": "/HTTP/说说HTTP1.0、1.1、2.0的区别.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：说说HTTP常见的状态码有哪些及其适用场景，并给出代码示例",
+        "title": "说说HTTP常见的状态码有哪些及其适用场景",
+        "markdownPath": "/HTTP/说说HTTP常见的状态码有哪些及其适用场景.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：说一下GET和POST的区别，并给出代码示例",
+        "title": "说一下GET和POST的区别",
+        "markdownPath": "/HTTP/说一下GET和POST的区别.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：说说HTTP常见的请求头有哪些及其作用，并给出代码示例",
+        "title": "说说HTTP常见的请求头有哪些及其作用",
+        "markdownPath": "/HTTP/说说HTTP常见的请求头有哪些及其作用.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：说说地址栏输入URL敲下回车后发生了什么，并给出代码示例",
+        "title": "说说地址栏输入URL敲下回车后发生了什么",
+        "markdownPath": "/HTTP/说说地址栏输入URL敲下回车后发生了什么.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：说说TCP为什么需要三次握手和四次挥手，并给出代码示例",
+        "title": "说说TCP为什么需要三次握手和四次挥手",
+        "markdownPath": "/HTTP/说说TCP为什么需要三次握手和四次挥手.md",
+        "timestamp": 1693379698000
+      },
+      {
+        "desc": "面试官：说说对WebSocket的理解及其应用场景，并给出代码示例",
+        "title": "说说对WebSocket的理解及其应用场景",
+        "markdownPath": "/HTTP/说说对WebSocket的理解及其应用场景.md",
+        "timestamp": 1693379698000
       }
     ]
   },
