--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
     - cron: "1 2 * * *" # 每天的 UTC 12:00（北京时间晚上8点）执行任务
     - cron: "1 3 * * *" # 每天的 UTC 13:00（北京时间晚上9点）执行任务
     - cron: "0 16 * * *" # 每天的 UTC 16:00（北京时间晚上12点）执行任务
+    - cron: "0 19 * * *" # 每天的 UTC 19:00（北京时间晚上3点）执行任务
     - cron: "0 21 * * *" # 每天的 UTC 21:00（北京时间凌晨5点）执行任务
   # 仅在推送到默认分支时运行。
   push:
