新增消息通知脚本

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,7 @@ jobs:
         run: |
           pwd
           ls -a
+          ./sendNotify.sh 
           cd ./dist/
           echo lptff.github.io > CNAME  
           echo > .nojekyll
