--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,7 @@ jobs:
         run: |
           pwd
           ls -a
+          chmod +x sendNotify.sh
           ./sendNotify.sh 
           cd ./dist/
           echo lptff.github.io > CNAME  
