测试微信推送是否重复

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,7 @@ jobs:
           chmod +x build.sh
           ./build.sh
           python  ./src/crawl/sendNotify.py 
+          python  ./src/crawl/sendNotify.py 
           cd ./src/public/data/
           git config --global user.email "lptffhh@gmail.com"
           git config --global user.name "LPTFF"
