--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "build": "vue-tsc --noEmit && vite build"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "axios": "1.4.0",
     "element-plus": "2.3.6",
     "gh-pages": "5.0.0",
     "openai": "3.3.0",
+    "ssh2": "^1.16.0",
+    "ssh2-sftp-client": "^12.0.0",
     "unplugin-vue-markdown": "0.24.1",
     "vue": "3.2.47",
     "vue-router": "4.1.6"
