--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "1.4.0",
     "element-plus": "2.3.6",
     "gh-pages": "5.0.0",
+    "jsencrypt": "^3.3.2",
     "openai": "3.3.0",
     "ssh2": "^1.16.0",
     "ssh2-sftp-client": "^12.0.0",
