--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "archiver": "^7.0.1",
     "axios": "1.4.0",
     "element-plus": "2.3.6",
+    "file-saver": "^2.0.5",
     "gh-pages": "5.0.0",
     "jsencrypt": "^3.3.2",
     "openai": "3.3.0",
@@ -18,9 +19,11 @@
     "ssh2-sftp-client": "^12.0.0",
     "unplugin-vue-markdown": "0.24.1",
     "vue": "3.2.47",
-    "vue-router": "4.1.6"
+    "vue-router": "4.1.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "18.16.0",
     "@vitejs/plugin-vue": "3.1.0",
     "eruda": "3.0.0",
