--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "preview": "vite preview",
     "serve": "vite",
-    "build": "vue-tsc --noEmit && vite build"
+    "build": "vue-tsc --noEmit && vite build && node ./scripts/copy-404.js"
   },
   "dependencies": {
     "archiver": "^7.0.1",
