解决代码报错

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@
 name: CI
 on:
   # 设置定时任务
-  schedule:
+  # schedule:
     # - cron: "0 4 * * *" # 每天的 UTC 04:00（北京时间上午12点）执行任务
     # - cron: "0 9 * * *" # 每天的 UTC 09:00（北京时间下午5点）执行任务
     # - cron: "0 19 * * *" # 每天的 UTC 19:00（北京时间凌晨3点）执行任务
